--- a/frontend/resources/css/app.css
+++ b/frontend/resources/css/app.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
+
+@layer utilities {
+    .bg-invitation-hero {
+        background: rgba(0, 0, 0, 0.5)
+            url("../../public/img/bg/wedding-hero.jpg");
+        background-blend-mode: multiply;
+        background-size: cover;
+        background-position: center;
+    }
+    .vertical-lr {
+        writing-mode: vertical-lr;
+        text-orientation: upright;
+    }
+    .vertical-rl {
+        writing-mode: vertical-rl;
+    }
+    .text-justify-last {
+        text-align-last: justify;
+        text-orientation: upright;
+    }
+}
